Edited with TinaCMS

--- a/content/pages/Home.mdx
+++ b/content/pages/Home.mdx
@@ -3,6 +3,8 @@ title: MIT Places
 home_page: true
 nav_bar: true
 sections:
+  - size: medium
+    _template: spacer
   - description: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
