Edited with TinaCMS

--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -9,6 +9,7 @@ path:
       title: Anne Whitney's Studio
       uuid: 2fbc9fcc-9a1d-4927-a6b0-0542c26a478c
       animate: true
+    blurb: ''
   - place:
       title: Alexander Hamilton Monument
       uuid: f79bd941-7b8d-40db-94ab-0b51299f5ae9
