--- a/content/pages/Home.mdx
+++ b/content/pages/Home.mdx
@@ -5,7 +5,8 @@ nav_bar: true
 sections:
   - size: medium
     _template: spacer
-  - description: >-
+  - title: Introduction
+    description: >+
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
       veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -13,6 +14,13 @@ sections:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
+
+
+
+
+
+
+
     image: >-
       https://core-data-tina-cms.s3.us-east-1.amazonaws.com/made-land-content/Dome_framework_0.jpg
     _template: text_image
