Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -6,3 +6,10 @@ cardImage: >-
   https://core-data-tina-cms.s3.us-east-1.amazonaws.com/made-land-content/1024px-Massachusetts_Institute_of_Technology_campus_aerial_War_Department_1925.jpg
 ---
 
+# Embeddable Items in Posts
+
+Posts can include data visualizations, media from Core Data, places from Core Data, and external AV.
+
+## Data Visualizations
+
+Map interface search results can be exported and then imported as data sources for the following data visualizations: Tables, Maps, Timelines, and Events by Year.
