Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -13,3 +13,5 @@ Posts can include data visualizations, media from Core Data, places from Core Da
 ## Data Visualizations
 
 Map interface search results can be exported and then imported as data sources for the following data visualizations: Tables, Maps, Timelines, and Events by Year.
+
+<data_table title="Table" />
