Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -15,3 +15,5 @@ Posts can include data visualizations, media from Core Data, places from Core Da
 Map interface search results can be exported and then imported as data sources for the following data visualizations: Tables, Maps, Timelines, and Events by Year.
 
 <data_table title="Table" />
+
+<map title="Maps" />
