Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -17,3 +17,9 @@ Map interface search results can be exported and then imported as data sources f
 <data_table title="Table" />
 
 <map title="Maps" />
+
+## Media
+
+Media from Core Data can also be embedded using a IIIF viewer. The metadata fields are defined by the user in Core Data.
+
+###
