Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -22,4 +22,15 @@ Map interface search results can be exported and then imported as data sources f
 
 Media from Core Data can also be embedded using a IIIF viewer. The metadata fields are defined by the user in Core Data.
 
-###
+<media
+  media={{
+    title: "anne-whitney.jpg",
+    uuid: "df551821-238e-485e-b5ff-7b5cda13b3ed",
+    manifest_url:
+      "https://app.iiifcloud.com/public/resources/063a010d-631d-4048-847d-7ad95aaa4260/manifest",
+    content_url:
+      "https://app.iiifcloud.com/public/resources/063a010d-631d-4048-847d-7ad95aaa4260/content",
+    content_preview_url:
+      "https://app.iiifcloud.com/public/resources/063a010d-631d-4048-847d-7ad95aaa4260/preview"
+  }}
+/>
