Edited with TinaCMS

--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -9,7 +9,12 @@ path:
       title: Anne Whitney's Studio
       uuid: 2fbc9fcc-9a1d-4927-a6b0-0542c26a478c
       animate: true
-    blurb: ''
+    blurb: >
+      Images and [links](https://mit-dh.netlify.app/en/) can be added to each
+      step in a path.
+
+
+      ![](https://core-data-tina-cms.s3.us-east-1.amazonaws.com/made-land-content/1024px-Massachusetts_Institute_of_Technology_campus_aerial_War_Department_1925.jpg)
   - place:
       title: Alexander Hamilton Monument
       uuid: f79bd941-7b8d-40db-94ab-0b51299f5ae9
