Edited with TinaCMS

--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -21,3 +21,4 @@ path:
     blurb: ''
 ---
 
+A path comprises a series of places that are already in the database with descriptions or other narrative.
