Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -34,3 +34,15 @@ Media from Core Data can also be embedded using a IIIF viewer. The metadata fiel
       "https://app.iiifcloud.com/public/resources/063a010d-631d-4048-847d-7ad95aaa4260/preview"
   }}
 />
+
+## Place
+
+Individual places can be embedded from Core Data. Unlike the data visualizations, these are not static, so updates to a place record in Core Data will be reflected here.
+
+<place
+  place={{
+    title: "Anne Whitney's Studio",
+    uuid: "2fbc9fcc-9a1d-4927-a6b0-0542c26a478c"
+  }}
+  title="Place"
+/>
