--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -8,7 +8,7 @@ path:
   - place:
       title: Anne Whitney's Studio
       uuid: 2fbc9fcc-9a1d-4927-a6b0-0542c26a478c
-      animate: true
+      animate: false
     blurb: >
       Images and [links](https://mit-dh.netlify.app/en/) can be added to each
       step in a path.
