Edited with TinaCMS

--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -18,7 +18,10 @@ path:
   - place:
       title: Alexander Hamilton Monument
       uuid: f79bd941-7b8d-40db-94ab-0b51299f5ae9
-    blurb: ''
+      animate: true
+      buffer: 0.2
+    blurb: |
+      The zoom level and map marker can also be customized.
 ---
 
 A path comprises a series of places that are already in the database with descriptions or other narrative.
