Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -14,6 +14,8 @@ Posts can include data visualizations, media from Core Data, places from Core Da
 
 Map interface search results can be exported and then imported as data sources for the following data visualizations: Tables, Maps, Timelines, and Events by Year.
 
+<data_table title="Table" data="{&#x22;name&#x22;:&#x22;places&#x22;,&#x22;data&#x22;:{&#x22;columns&#x22;:[&#x22;name&#x22;],&#x22;rows&#x22;:[{&#x22;name&#x22;:&#x22;Alexander Hamilton Monument&#x22;},{&#x22;name&#x22;:&#x22;Anne Whitney's Studio&#x22;}]}}" />
+
 ## Media
 
 Media from Core Data can also be embedded using a IIIF viewer. The metadata fields are defined by the user in Core Data.
