Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -18,6 +18,8 @@ Map interface search results can be exported and then imported as data sources f
 
 <map title="Map" data="{&#x22;data&#x22;:[{&#x22;id&#x22;:&#x22;f79bd941-7b8d-40db-94ab-0b51299f5ae9&#x22;,&#x22;name&#x22;:&#x22;Alexander Hamilton Monument&#x22;,&#x22;names&#x22;:[&#x22;Alexander Hamilton Monument&#x22;],&#x22;record_id&#x22;:&#x22;10181&#x22;,&#x22;uuid&#x22;:&#x22;f79bd941-7b8d-40db-94ab-0b51299f5ae9&#x22;,&#x22;geometry&#x22;:{&#x22;coordinates&#x22;:[-71.072389,42.353389],&#x22;type&#x22;:&#x22;Point&#x22;}},{&#x22;id&#x22;:&#x22;2fbc9fcc-9a1d-4927-a6b0-0542c26a478c&#x22;,&#x22;name&#x22;:&#x22;Anne Whitney's Studio&#x22;,&#x22;names&#x22;:[&#x22;Anne Whitney's Studio&#x22;],&#x22;record_id&#x22;:&#x22;10176&#x22;,&#x22;uuid&#x22;:&#x22;2fbc9fcc-9a1d-4927-a6b0-0542c26a478c&#x22;,&#x22;geometry&#x22;:{&#x22;coordinates&#x22;:[-71.068763,42.357852],&#x22;type&#x22;:&#x22;Point&#x22;}}],&#x22;name&#x22;:&#x22;places&#x22;}" />
 
+<data_table title="Table" data="{&#x22;name&#x22;:&#x22;places&#x22;,&#x22;data&#x22;:{&#x22;columns&#x22;:[&#x22;name&#x22;],&#x22;rows&#x22;:[{&#x22;name&#x22;:&#x22;Alexander Hamilton Monument&#x22;},{&#x22;name&#x22;:&#x22;Anne Whitney's Studio&#x22;}]}}" />
+
 ## Media
 
 Media from Core Data can also be embedded using a IIIF viewer. The metadata fields are defined by the user in Core Data.
