--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -48,3 +48,7 @@ Individual places can be embedded from Core Data. Unlike the data visualizations
   }}
   title="Place"
 />
+
+## External AV Embed
+
+<iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1192598410&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true" />
