--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -51,4 +51,6 @@ Individual places can be embedded from Core Data. Unlike the data visualizations
 
 ## External AV Embed
 
+Audio or visual files that are not in the database can also be embedded into Posts. Instructions are [here](https://community.performantsoftware.com/t/how-do-i-embed-av-from-an-external-source-into-a-post/55).
+
 <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1192598410&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true" />
