Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -39,7 +39,7 @@ Media from Core Data can also be embedded using a IIIF viewer. The metadata fiel
 
 ## Place
 
-Individual places can be embedded from Core Data. Unlike the data visualizations, these are not static, so updates to a place record in Core Data will be reflected here.
+Individual [places can be embedded](https://community.performantsoftware.com/t/how-do-i-embed-a-place-in-a-post/54) from Core Data. Unlike the data visualizations, these are not static, so updates to a place record in Core Data will be reflected here.
 
 <place
   place={{
