Edited with TinaCMS

--- a/content/posts/Demo-Post.mdx
+++ b/content/posts/Demo-Post.mdx
@@ -8,19 +8,17 @@ cardImage: >-
 
 # Embeddable Items in Posts
 
-Posts can include data visualizations, media from Core Data, places from Core Data, and external AV.
+[Posts](https://community.performantsoftware.com/t/how-do-i-create-a-post/47) can include data visualizations, media from Core Data, places from Core Data, and external AV.
 
 ## Data Visualizations
 
-Map interface search results can be exported and then imported as data sources for the following data visualizations: Tables, Maps, Timelines, and Events by Year.
+Map interface [search results can be exported and then imported as data sources](https://community.performantsoftware.com/t/how-do-i-embed-a-set-of-places-a-table-or-a-mini-timeline-into-a-post/56) for the following data visualizations: Tables, Maps, Timelines, and Events by Year.
 
 <data_table title="Table" data="{&#x22;name&#x22;:&#x22;places&#x22;,&#x22;data&#x22;:{&#x22;columns&#x22;:[&#x22;name&#x22;],&#x22;rows&#x22;:[{&#x22;name&#x22;:&#x22;Alexander Hamilton Monument&#x22;},{&#x22;name&#x22;:&#x22;Anne Whitney's Studio&#x22;}]}}" />
 
 <map title="Map" data="{&#x22;data&#x22;:[{&#x22;id&#x22;:&#x22;f79bd941-7b8d-40db-94ab-0b51299f5ae9&#x22;,&#x22;name&#x22;:&#x22;Alexander Hamilton Monument&#x22;,&#x22;names&#x22;:[&#x22;Alexander Hamilton Monument&#x22;],&#x22;record_id&#x22;:&#x22;10181&#x22;,&#x22;uuid&#x22;:&#x22;f79bd941-7b8d-40db-94ab-0b51299f5ae9&#x22;,&#x22;geometry&#x22;:{&#x22;coordinates&#x22;:[-71.072389,42.353389],&#x22;type&#x22;:&#x22;Point&#x22;}},{&#x22;id&#x22;:&#x22;2fbc9fcc-9a1d-4927-a6b0-0542c26a478c&#x22;,&#x22;name&#x22;:&#x22;Anne Whitney's Studio&#x22;,&#x22;names&#x22;:[&#x22;Anne Whitney's Studio&#x22;],&#x22;record_id&#x22;:&#x22;10176&#x22;,&#x22;uuid&#x22;:&#x22;2fbc9fcc-9a1d-4927-a6b0-0542c26a478c&#x22;,&#x22;geometry&#x22;:{&#x22;coordinates&#x22;:[-71.068763,42.357852],&#x22;type&#x22;:&#x22;Point&#x22;}}],&#x22;name&#x22;:&#x22;places&#x22;}" />
 
 <timeline title="Timeline" data="{&#x22;name&#x22;:&#x22;places&#x22;,&#x22;events&#x22;:[{&#x22;name&#x22;:&#x22;Alexander Hamilton's Lifetime&#x22;,&#x22;start_date&#x22;:[-6783868800,-6783868800],&#x22;end_date&#x22;:[-5221843200,-5221843200]},{&#x22;name&#x22;:&#x22;Anne Whitney's Lifetime&#x22;,&#x22;start_date&#x22;:[-4701974400,-4701888000],&#x22;end_date&#x22;:[-1735689600,-1735603200]}],&#x22;min&#x22;:1755,&#x22;max&#x22;:1915}" />
-
-<data_table title="Table" data="{&#x22;name&#x22;:&#x22;places&#x22;,&#x22;data&#x22;:{&#x22;columns&#x22;:[&#x22;name&#x22;],&#x22;rows&#x22;:[{&#x22;name&#x22;:&#x22;Alexander Hamilton Monument&#x22;},{&#x22;name&#x22;:&#x22;Anne Whitney's Studio&#x22;}]}}" />
 
 ## Media
 
