--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -24,4 +24,4 @@ path:
       The zoom level and map marker can also be customized.
 ---
 
-A path comprises a series of places that are already in the database with descriptions or other narrative.
+[A path](https://community.performantsoftware.com/t/how-do-i-create-a-path/48) is a series of ordered places that are pulled from the database. Each step in the path can have images, links, and text.
