Edited with TinaCMS

--- a/content/paths/Demo-Path.mdx
+++ b/content/paths/Demo-Path.mdx
@@ -24,4 +24,4 @@ path:
       The zoom level and map marker can also be customized.
 ---
 
-[A path](https://community.performantsoftware.com/t/how-do-i-create-a-path/48) is a series of ordered places that are pulled from the database. Each step in the path can have images, links, and text.
+[A path](https://community.performantsoftware.com/t/how-do-i-create-a-path/48) is a series of ordered places that are pulled from the database. Each step in a path can have images, links, and/or text.
